2002-07-23  Andreas Jaeger  <aj@suse.de>

	* gengtype.c (open_base_files): Add tree.h.

	* tree-alias-type.h: Remove inclusion of tree.h.

	* tree-alias-steen.c: Include tree.h.
	Add prototype for create_fun_alias_var_ptf.

	* tree-alias-ecr.c: Add prototype for ECR_add_pending.

	* tree-ssa-pre.c (calculate_preorder): Remove unused variables.

	* tree-simple.c: Include expr.h and rtl.h for prototypes.

	* tree-optimize.c: Include tree-alias-steen.h for prototypes.

	* Makefile.in (tree-optimize.o): Add tree-alias-steen.h.
	(tree-simple.o): Add expr.h and rtl.h.
	(tree-alias-steen.o): Add tree.h.
	
	* diagnostic.h: Add declaration of debug_output_buffer.

	* c-call-graph.c (construct_call_graph): Make static to follow
	declaration.
	(construct_call_graph): Use #if 0 instead of C++ comments to
	disable code.

2002-07-19  Jason Merrill  <jason@redhat.com>

	* c-simplify.c (simplify_return_stmt): Do simplify a returned
	expression in a void function.

	* c-simplify.c (simplify_stmt_expr): Handle C++ return semantics.

2002-07-20  Andreas Jaeger  <aj@suse.de>

	* doc/invoke.texi (Option Summary): Fix syntax.

2002-07-19  Jason Merrill  <jason@redhat.com>

	* c-pretty-print.c (dump_c_node) [TARGET_EXPR]: Handle.
	[COND_EXPR]: Print a returned expression in a void function.

2002-07-19  Ben Elliston  <bje@redhat.com>
 
 	* tree-ssa-pre.c (tree_perform_ssapre): Don't dump the original
 	tree before applying this optimisation.
 
 	* flags.h (flag_dump_tree_all_ssa): New flag.
 	* toplev.c (flag_dump_tree_all_ssa): New flag.
 	(f_options): Add "dump-tree-all-ssa" option.
 	(process_options): Process flag_dump_tree_all_ssa.
 	* tree.h (dump_enable_all_ssa): Declare.
 	* tree-dump.c (dump_enable_all_ssa): New function.
 	* doc/invoke.texi (Option Summary): Add -fdump-tree-all-ssa and
 	-fdump-tree-ssapre options.
 	(Debugging Options): Describe in more detail.
 	* c-simplify.c (c_simplify_function_tree): Dump the original tree